--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
@@ -5,7 +5,7 @@
         <h3>{% trans %}module_profile_1{% endtrans %}</h3>
         
         <form id="form_cp_module_profile" action="{{path("cp_module_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            <div class="visible-xs visible-sm">
+            <div class="display_mobile">
                 <div class="form-group">
                     {{form_label(form.position, "module_profile_2")}}
                     <div class="input-group">
@@ -48,7 +48,7 @@
             <input class="btn btn-primary" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
         
-        {% if is_granted("ROLE_ADMIN") == true and urlExtra > 4 %}
+        {% if is_granted("ROLE_ADMIN") == true and urlExtra > 5 %}
             {{-include("UebusaitoBundle::render/control_panel/module_deletion.html.twig")-}}
         {% endif %}
     </div>
