--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -128,6 +128,7 @@
             'index': "{{path("index")}}",
             'languageText': "{{path("language_text", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'languagePage': "{{path("language_page", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'search': "{{path("search", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'authenticationEnterCheck': "{{path("authentication_enter_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'authenticationExitCheck': "{{path("authentication_exit_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'registration': "{{path("registration", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
@@ -205,6 +206,7 @@
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Table.js")}}"></script>
     
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Language.js")}}"></script>
+    <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Search.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Authentication.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Registration.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/RecoverPassword.js")}}"></script>
