--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
@@ -123,22 +123,31 @@ body { font-family: "pt_sans", sans-serif; margin: 0px auto; overflow-x: hidden;
 @media (max-width: 992px) { .message_single_page i { font-size: 12em; color: #cecece; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; margin-bottom: 40px; }
   .message_single_page p { font-family: "acme", sans-serif; font-size: 35px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; }
   .nav_bar_fix { margin-bottom: 55px; }
+  .navbar-default { position: fixed; top: 0; left: 0; right: 0; border-width: 0 0 1px; border-radius: 0; -webkit-box-shadow: 0px 0px 20px #444444; -moz-box-shadow: 0px 0px 20px #444444; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=20, Direction=0, Color='#444444')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=20, Direction=0, Color='#444444')"; box-shadow: 0px 0px 20px #444444; }
   .navbar-default .navbar-header { display: block !important; float: none !important; padding: 5px 0; }
   .navbar-default .navbar-header .navbar_header_content { display: inline-block; vertical-align: middle; padding-right: 0px; padding-left: 0px; }
-  .navbar-default .navbar-header .navbar_header_icon { padding-right: 8px; }
+  .navbar-default .navbar-header .navbar_header_icon { padding-right: 2px; }
   .navbar-default .navbar-header .navbar_header_icon .panel { width: 250px; margin-bottom: 0; }
   .navbar-default .navbar-toggle { display: block; }
   .navbar-default .navbar-collapse { border-top: 1px solid transparent; box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
   .navbar-default .navbar-collapse.collapse { display: none !important; }
-  .navbar-default .navbar-nav { float: none !important; margin-top: 7.5px; }
+  .navbar-default .navbar-nav { float: none !important; margin-top: 7.5px; margin-left: -15px; margin-right: -15px; -webkit-margin-after: 7.5px; }
   .navbar-default .navbar-nav > li { float: none; }
   .navbar-default .navbar-nav > li > a { padding-top: 10px; padding-bottom: 10px; }
   .navbar-default .navbar-nav .open .dropdown-menu { position: static; float: none; width: auto; margin-top: 0; background-color: transparent; border: 0; -webkit-box-shadow: none; box-shadow: none; }
-  .navbar-default .collapse.in { display: block !important; } }
+  .navbar-default .collapse.in { display: block !important; }
+  #panel_id_4 .form-group { display: inline; margin-bottom: 0; }
+  #panel_id_5 { position: relative; margin: 0 10px; }
+  #panel_id_5 .module_settings { display: none !important; }
+  #panel_id_5 .search_input { cursor: pointer; position: absolute; width: 34px; height: 33px; background-color: #000000; border-radius: 4px; }
+  #panel_id_5 .search_input .fa-search { position: absolute; top: 10px; left: 11px; color: #ffffff; }
+  #panel_id_5 .form-group { margin: 0; }
+  #panel_id_5 .form-group input { padding-left: 40px; } }
 @media (min-width: 992px) { .message_single_page i { font-size: 15em; color: #cecece; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; margin-bottom: 40px; }
   .message_single_page p { font-family: "acme", sans-serif; font-size: 75px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; }
   .search_input { width: 30%; }
   .nav_bar_fix { margin-bottom: 0; }
+  .navbar-default { position: relative; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-filter: none; filter: none; box-shadow: none; }
   .navbar-default .navbar-header { display: none !important; float: left !important; }
   .navbar-default .navbar-toggle { display: none; }
   .navbar-default .navbar-collapse { border-top: 0; box-shadow: none; }
@@ -148,7 +157,15 @@ body { font-family: "pt_sans", sans-serif; margin: 0px auto; overflow-x: hidden;
   .navbar-default .navbar-nav .open .dropdown-menu { position: absolute; float: left; background-color: #2f343a; border: 1px solid #ccc; -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); }
   .navbar-default .navbar-nav .dropdown-menu .dropdown-menu { top: 0; left: 100%; }
   .navbar-default .collapse.in { display: block !important; }
-  .authentication_maintenance { max-width: 50%; margin: auto; } }
+  .authentication_maintenance { max-width: 50%; margin: auto; }
+  #panel_id_4 { position: absolute; top: 35px; right: 10px; }
+  #panel_id_4 .module_settings { display: none !important; }
+  #panel_id_4 .form-group { display: inline; margin-bottom: 0; }
+  #panel_id_5 { position: absolute; top: 35px; right: 180px; }
+  #panel_id_5 .module_settings { display: none !important; }
+  #panel_id_5 .search_input { cursor: pointer; position: absolute; width: 34px; height: 33px; background-color: #000000; border-radius: 4px; }
+  #panel_id_5 .search_input .fa-search { position: absolute; top: 10px; left: 11px; color: #ffffff; }
+  #panel_id_5 .form-group input { padding-left: 40px; } }
 .container-fluid { overflow: hidden; }
 
 .logo_desktop { display: none; font-family: "acme", sans-serif; font-size: 75px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; margin: 0; }
@@ -229,9 +246,9 @@ body { margin-bottom: 150px; }
 
 .jqte_tool.jqte_tool_1 .jqte_tool_label { height: auto !important; }
 
-#_remember_me { position: relative; top: 2px; right: 2px; }
-
 .remember_me_fix { margin: 5px 0 5px 10px !important; display: inline-block !important; }
+
+#_remember_me { position: relative; top: 2px; right: 2px; }
 
 #menu_root { z-index: 1000; }
 
