--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
@@ -20,6 +20,19 @@
         margin-bottom: 55px;
     }
     .navbar-default {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        border-width: 0 0 1px;
+        border-radius: 0;
+        
+        -webkit-box-shadow: 0px 0px 20px #444444;
+        -moz-box-shadow: 0px 0px 20px #444444;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=20, Direction=0, Color='#444444')";
+        filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=20, Direction=0, Color='#444444')";
+        box-shadow: 0px 0px 20px #444444;
+        
         .navbar-header {
             display: block !important;
             float: none !important;
@@ -32,7 +45,7 @@
                 padding-left: 0px;
             }
             .navbar_header_icon {
-                padding-right: 8px;
+                padding-right: 2px;
                 
                 .panel {
                     width: 250px;
@@ -54,6 +67,9 @@
         .navbar-nav {
             float: none !important;
             margin-top: 7.5px;
+            margin-left: -15px;
+            margin-right: -15px;
+            -webkit-margin-after: 7.5px;
             
             & > li {
                 float: none;
@@ -83,6 +99,46 @@
             }
         }
     }
+    
+    #panel_id_4 {
+        .form-group {
+            display: inline;
+            margin-bottom: 0;
+        }
+    }
+    
+    #panel_id_5 {
+        position: relative;
+        margin: 0 10px;
+        
+        .module_settings {
+            display: none !important;
+        }
+        
+        .search_input {
+            cursor: pointer;
+            position: absolute;
+            width: 34px;
+            height: 33px;
+            background-color: #000000;
+            border-radius: 4px;
+            
+            .fa-search {
+                position: absolute;
+                top: 10px;
+                left: 11px;
+                color: #ffffff;
+            }
+        }
+        
+        .form-group {
+            margin: 0;
+            
+            input {
+                padding-left: 40px;
+            }
+        }
+    }
 }
 @media(min-width: $minWidth) {
     .message_single_page {
@@ -108,6 +164,14 @@
         margin-bottom: 0;
     }
     .navbar-default {
+        position: relative;
+        
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        -ms-filter: none;
+        filter: none;
+        box-shadow: none;
+        
         .navbar-header {
             display: none !important;
             float: left !important;
@@ -159,6 +223,53 @@
     .authentication_maintenance {
         max-width: 50%;
         margin: auto;
+    }
+    
+    #panel_id_4 {
+        position: absolute;
+        top: 35px;
+        right: 10px;
+        
+        .module_settings {
+            display: none !important;
+        }
+        
+        .form-group {
+            display: inline;
+            margin-bottom: 0;
+        }
+    }
+    
+    #panel_id_5 {
+        position: absolute;
+        top: 35px;
+        right: 180px;
+        
+        .module_settings {
+            display: none !important;
+        }
+        
+        .search_input {
+            cursor: pointer;
+            position: absolute;
+            width: 34px;
+            height: 33px;
+            background-color: #000000;
+            border-radius: 4px;
+            
+            .fa-search {
+                position: absolute;
+                top: 10px;
+                left: 11px;
+                color: #ffffff;
+            }
+        }
+        
+        .form-group {
+            input {
+                padding-left: 40px;
+            }
+        }
     }
 }
 
@@ -397,14 +508,15 @@ body {
     height: auto !important;
 }
 
+.remember_me_fix {
+    margin: 5px 0 5px 10px !important;
+    display: inline-block !important;
+}
+
 #_remember_me {
     position: relative;
     top: 2px;
     right: 2px;
-}
-.remember_me_fix {
-    margin: 5px 0 5px 10px !important;
-    display: inline-block !important;
 }
 
 #menu_root {
