--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/language_text.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/language_text.html.twig
@@ -1,1 +1,3 @@
-{{-render(controller("UebusaitoBundle:Language:text", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+<div class="display_desktop">
+    {{-render(controller("UebusaitoBundle:Language:text", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+</div>
