--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/language_text.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/language_text.html.twig
@@ -1,4 +1,4 @@
-{% extends "UebusaitoBundle::layout/layout_module.html.twig" %}
+{% extends "UebusaitoBundle::layout/layout_module_clean.html.twig" %}
 
 {% block panelId %}panel_id_{{response.module.id}}{% endblock %}
 {% block moduleHeaderIcon %}
@@ -12,7 +12,7 @@
 
     <div class="language_container horizontal_center">
         <img id="language_flag_{{app.request.getLocale()}}" class="language_text_flag display_inline" src="{{asset("bundles/uebusaito/images/templates/" ~ settings['template'] ~ "/lang/" ~ app.request.getLocale() ~ ".png")}}" alt="{{app.request.getLocale()}}.png"/>
-        <form class="form_language_text display_inline" action="{{path("language_text", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_language_text" class="form_language_text display_inline" action="{{path("language_text", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.codeText, {'label': false})}}
 
             {{form_widget(form.token)}}
