--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/menu_root.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/menu_root.html.twig
@@ -31,6 +31,16 @@
                 </div>
                 <div class="navbar_header_content navbar_header_icon">
                     <div class="dropdown">
+                        <button id="search_button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                            <i class="fa fa-search fa-lg"></i>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            {{-render(controller("UebusaitoBundle:Search:index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+                        </div>
+                    </div>
+                </div>
+                <div class="navbar_header_content navbar_header_icon">
+                    <div class="dropdown">
                         <button id="language_button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                             <i class="fa fa-globe fa-lg"></i>
                         </button>
