--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
@@ -216,25 +216,15 @@ body { margin-bottom: 150px; }
 
 .footer_fix { position: absolute; bottom: 0; width: 100%; min-height: 60px; background-color: #f5f5f5; text-align: center; background-color: #2f343a; color: #ffffff; }
 
-.footer_social { margin-bottom: 10px; }
+.footer_icons { margin-bottom: 10px; }
 
-.footer_social a { color: #ffffff; display: inline-block; text-align: center; min-width: 50px; font-size: 28px; }
+.footer_icons div { color: #ffffff; display: inline-block; text-align: center; min-width: 50px; font-size: 28px; }
 
 .btn { white-space: normal; outline: none !important; }
 
 .button_order { display: block; padding: 4px; cursor: pointer; }
 
 .button_payPal { background: url("../images/templates/basic/button_payPal.png") no-repeat; cursor: pointer; width: 100px; height: 38px; border: none; }
-
-.button_social_google { background-color: #dd4b39; }
-
-.button_social_twitter { background-color: #1ca8e4; }
-
-.button_social_facebook { background-color: #4b6ca5; }
-
-.button_social_android { background-color: #99ca3c; }
-
-.button_social_apple { background-color: #a7a9ab; }
 
 .form-control { height: 33px !important; }
 
