--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/footer.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/footer.html.twig
@@ -1,27 +1,21 @@
 <div class="row">
     <div class="col-md-12 margin_top">
-        <div class="footer_social">
-            <a class="button_social_google" title="Google+" href="https://plus.google.com" target="_blank">
-                <i class="fa fa-google-plus"></i>
-            </a>
-            <a class="button_social_twitter" title="Twitter" href="https://twitter.com" target="_blank">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a class="button_social_facebook" title="Facebook" href="https://www.facebook.com" target="_blank">
-                <i class="fa fa-facebook"></i>
-            </a>
-            <a class="button_social_android" title="Android" href="https://play.google.com">
-                <i class="fa fa-android"></i>
-            </a>
-            <a class="button_social_apple" title="Apple" href="https://www.apple.com/itunes" target="_blank">
-                <i class="fa fa-apple"></i>
-            </a>
+        <div class="footer_icons">
+            <div>
+                <i class="fa fa-desktop"></i>
+            </div>
+            <div>
+                <i class="fa fa-laptop"></i>
+            </div>
+            <div>
+                <i class="fa fa-mobile"></i>
+            </div>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-md-12">
-        <p>Copyright © 2016 - Reinvent software.</p>
+        <p>Copyright © 2017 - Reinvent software.</p>
         <p>Tutti i diritti riservati.</p>
     </div>
 </div>
