--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/search.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/search.html.twig
@@ -1,3 +1,3 @@
 <div class="display_desktop">
-    {{-render(controller("UebusaitoBundle:Search:index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+    {{-render(controller("UebusaitoBundle:Search:words", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 </div>
