--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -128,11 +128,11 @@
             'index': "{{path("index")}}",
             'languageText': "{{path("language_text", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'languagePage': "{{path("language_page", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'search': "{{path("search", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'authenticationEnterCheck': "{{path("authentication_enter_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'authenticationExitCheck': "{{path("authentication_exit_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'search_words': "{{path("search_words", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'registration': "{{path("registration", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'recoverPassword': "{{path("recover_password", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'authenticationEnterCheck': "{{path("authentication_enter_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'authenticationExitCheck': "{{path("authentication_exit_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpProfile': "{{path("cp_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpProfilePassword': "{{path("cp_profile_password", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpProfileCredits': "{{path("cp_profile_credits", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
