--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile_sort.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile_sort.html.twig
@@ -11,7 +11,7 @@
         </ul>
     </div>
     <div class="col-xs-3 horizontal_center">
-        <i id="module_profile_sort_button_up" class="fa fa-caret-square-o-up button_order"></i>
-        <i id="module_profile_sort_button_down" class="fa fa-caret-square-o-down button_order"></i>
+        <i id="module_profile_sort_button_up" class="fa fa-caret-square-o-up button_sort"></i>
+        <i id="module_profile_sort_button_down" class="fa fa-caret-square-o-down button_sort"></i>
     </div>
 </div>
