--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
@@ -194,23 +194,29 @@ body { margin-bottom: 150px; }
 .navbar-default .navbar-nav .open > a { color: #000000; }
 .navbar-default .navbar-nav .open .dropdown-menu > li > a { color: #ffffff; }
 .navbar-default .navbar-nav .open .dropdown-menu .open > a { color: #000000; }
-.navbar-default .navbar-nav .active > a { background-color: #e7e7e7; color: #555 !important; }
+.navbar-default .navbar-nav .active > a { background-color: #e7e7e7; color: #000000 !important; }
 
 .nav-tabs { border-bottom: 0; }
+
+.form-control { height: 33px !important; }
+
+.btn { white-space: normal; outline: none !important; }
+
+.alert { margin-bottom: 10px; }
+
+.panel-heading { padding: 10px 0; border-bottom: 1px solid #c6c6c6; }
+
+.panel-body { padding: 15px 0; }
+
+.panel { position: relative; background-color: #E7E7E7; padding-right: 15px; padding-left: 15px; -webkit-box-shadow: none; box-shadow: none; }
+
+.panel_clean { position: relative; }
 
 .page_header { margin: 0; }
 
 .page_header_h1 { margin: 0; }
 
 .page_container { padding: 25px 15px; border: 1px solid #dddddd; padding-top: 10px; }
-
-.panel { position: relative; background-color: #E7E7E7; padding-right: 15px; padding-left: 15px; -webkit-box-shadow: none; box-shadow: none; }
-
-.panel_clean { position: relative; }
-
-.panel-heading { padding: 10px 0; border-bottom: 1px solid #c6c6c6; }
-
-.panel-body { padding: 15px 0; }
 
 .language_page_flag_selected { border: 1px solid #0000F0; }
 
@@ -220,23 +226,17 @@ body { margin-bottom: 150px; }
 
 .footer_icons div { color: #ffffff; display: inline-block; text-align: center; min-width: 50px; font-size: 28px; }
 
-.btn { white-space: normal; outline: none !important; }
-
-.button_order { display: block; padding: 4px; cursor: pointer; }
+.button_sort { display: block; padding: 4px; cursor: pointer; }
 
 .button_payPal { background: url("../images/templates/basic/button_payPal.png") no-repeat; cursor: pointer; width: 100px; height: 38px; border: none; }
 
-.form-control { height: 33px !important; }
-
-.alert { margin-bottom: 10px; }
+.remember_me_fix { margin: 5px 0 5px 10px !important; display: inline-block !important; }
 
 .jqte { margin: 0 !important; }
 
 .jqte_editor { height: 250px !important; }
 
 .jqte_tool.jqte_tool_1 .jqte_tool_label { height: auto !important; }
-
-.remember_me_fix { margin: 5px 0 5px 10px !important; display: inline-block !important; }
 
 #_remember_me { position: relative; top: 2px; right: 2px; }
 
@@ -247,5 +247,9 @@ body { margin-bottom: 150px; }
 #language_flag img { cursor: pointer; padding: 2px; }
 
 #form_language_codeText { width: 70%; padding: 0; }
+
+#search_result .container { border: 1px solid #ccc; padding: 10px; margin: 10px; }
+#search_result .container .title { text-decoration: underline; }
+#search_result .container .argument { margin: 0; }
 
 /*# sourceMappingURL=basic.css.map */
