--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
@@ -525,9 +525,9 @@ body {
 
 #search_result {
     .text {
-        
+        margin-bottom: 10px;
     }
-    .container {
+    .box {
         border: 1px solid #ccc;
         padding: 10px;
         margin: 10px;
