--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table.html.twig
@@ -1,8 +1,8 @@
-<div class="margin_bottom">
+<div class="buttons margin_bottom">
     <button class="btn btn-primary refresh">Refresh</button>
     <button class="btn btn-danger delete_all">Delete all</button>
 </div>
-<div class="input-group search_input pull-right margin_bottom">
+<div class="input-group pull-right search_input margin_bottom">
     <input class="form-control" type="text" placeholder="{% trans %}table_1{% endtrans %}" value="{{response.values.search.value}}"/>
     <span class="input-group-btn">
         <button class="btn btn-primary" type="button">
