--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
@@ -4,60 +4,74 @@
     <div class="col-md-5">
         <h3>{% trans %}settings_1{% endtrans %}</h3>
         <form id="form_cp_settings" action="{{path("cp_settings", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.emailAdmin, {'label': "settings_2"})}}
-            {{form_row(form.template, {'label': "settings_3"})}}
-            {{form_row(form.active, {'label': "settings_4"})}}
+            <fieldset>
+                <legend>{% trans %}settings_2{% endtrans %}</legend>
+                {{form_row(form.emailAdmin, {'label': "settings_3"})}}
+                {{form_row(form.template, {'label': "settings_4"})}}
+                {{form_row(form.language, {'label': "settings_17"})}}
+            </fieldset>
             
-            <div id="form_settings_roleId_wordTag_container" class="form-group">
-                {{form_label(form.roleId, "settings_5")}}
-                {{form_errors(form.roleId)}}
-                {{form_widget(form.roleId)}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-tags"></i></span>
-                    {{response.values.rolesSelect|raw}}
+            <fieldset>
+                <legend>{% trans %}settings_5{% endtrans %}</legend>
+                {{form_row(form.active, {'label': "settings_6"})}}
+
+                <div id="form_settings_roleId_wordTag_container" class="form-group">
+                    {{form_label(form.roleId, "settings_7")}}
+                    {{form_errors(form.roleId)}}
+                    {{form_widget(form.roleId)}}
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-tags"></i></span>
+                        {{response.values.rolesSelect|raw}}
+                    </div>
                 </div>
-            </div>
+                    
+                {{form_row(form.https, {'label': "settings_8"})}}
+                {{form_row(form.registrationUserConfirmAdmin, {'label': "settings_9"})}}
+            </fieldset>
             
-            {{form_row(form.https, {'label': "settings_6"})}}
-            {{form_row(form.registrationUserConfirmAdmin, {'label': "settings_7"})}}
-            
-            <div class="form-group">
-                {{form_label(form.payPalSandbox, "settings_8")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
-                    {{form_errors(form.payPalSandbox)}}
-                    {{form_widget(form.payPalSandbox)}}
+            <fieldset>
+                <legend>{% trans %}settings_10{% endtrans %}</legend>
+                <div class="form-group">
+                    {{form_label(form.payPalSandbox, "settings_11")}}
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
+                        {{form_errors(form.payPalSandbox)}}
+                        {{form_widget(form.payPalSandbox)}}
+                    </div>
                 </div>
-            </div>
-            
-            <div class="form-group">
-                {{form_label(form.payPalBusiness, "settings_9")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
-                    {{form_errors(form.payPalBusiness)}}
-                    {{form_widget(form.payPalBusiness)}}
+
+                <div class="form-group">
+                    {{form_label(form.payPalBusiness, "settings_12")}}
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
+                        {{form_errors(form.payPalBusiness)}}
+                        {{form_widget(form.payPalBusiness)}}
+                    </div>
                 </div>
-            </div>
-            
-            <div class="form-group">
-                {{form_label(form.payPalCurrencyCode, "settings_10")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
-                    {{form_errors(form.payPalCurrencyCode)}}
-                    {{form_widget(form.payPalCurrencyCode)}}
+
+                <div class="form-group">
+                    {{form_label(form.payPalCurrencyCode, "settings_13")}}
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
+                        {{form_errors(form.payPalCurrencyCode)}}
+                        {{form_widget(form.payPalCurrencyCode)}}
+                    </div>
                 </div>
-            </div>
-            
-            <div class="form-group">
-                {{form_label(form.payPalCreditAmount, "settings_11")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
-                    {{form_errors(form.payPalCreditAmount)}}
-                    {{form_widget(form.payPalCreditAmount)}}
+
+                <div class="form-group">
+                    {{form_label(form.payPalCreditAmount, "settings_14")}}
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
+                        {{form_errors(form.payPalCreditAmount)}}
+                        {{form_widget(form.payPalCreditAmount)}}
+                    </div>
                 </div>
-            </div>
+            </fieldset>
             
-            {{form_row(form.credits, {'label': "settings_12"})}}
+            <fieldset>
+                <legend>{% trans %}settings_15{% endtrans %}</legend>
+                {{form_row(form.credits, {'label': "settings_16"})}}
+            </fieldset>
 
             {{form_widget(form.token)}}
 
