--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/static/error.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/static/error.html.twig
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <div class="message_single_page horizontal_center">
                 <i class="fa fa-exclamation-triangle margin_top"></i>
-                <p>PAGE 404</p>
+                <p>{% trans %}error_1{% endtrans %}</p>
             </div>
         </div>
         <!-- Javascript -->
